fix redirec url in oidc config prod json file

--- a/src/assets/data/oidc.config.prod.json
+++ b/src/assets/data/oidc.config.prod.json
@@ -1,6 +1,6 @@
 {
 	"stsServer":"https://jeidentityserver4.azurewebsites.net",
-	"redirect_url":"https://jeidentityserveradmin.azurewebsites.net/dashboard/home",
+	"redirect_url":"https://jeidentityserveradmin.azurewebsites.net/authorized",
 	"client_id":"jeIdentityServerAdmin",
 	"response_type":"id_token",
 	"scope":"openid profile",
