--- a/src/assets/data/oidc.config.json
+++ b/src/assets/data/oidc.config.json
@@ -6,7 +6,7 @@
 	"scope":"openid profile",
 	"post_logout_redirect_uri":"http://localhost:4200",
 	"start_checksession":true,
-	"silent_renew":true,
+	"silent_renew":false,
 	"silent_renew_url":"https://localhost:4200/silent-renew.html",
 	"startup_route":"/dashboard/home",
 	"forbidden_route":"/forbidden",
