add trigger_authorization_result_event option

--- a/src/assets/data/oidc.config.prod.json
+++ b/src/assets/data/oidc.config.prod.json
@@ -11,6 +11,7 @@
 	"startup_route":"/dashboard/home",
 	"forbidden_route":"/forbidden",
 	"unauthorized_route":"/unauthorized",
+	"trigger_authorization_result_event": true,
 	"log_console_warning_active":true,
 	"log_console_debug_active":true,
 	"max_id_token_iat_offset_allowed_in_seconds":"10",
