--- a/src/assets/data/oidc.config.json
+++ b/src/assets/data/oidc.config.json
@@ -8,9 +8,10 @@
 	"start_checksession":true,
 	"silent_renew":false,
 	"silent_renew_url":"https://localhost:4200/silent-renew.html",
-	"startup_route":"/dashboard/home",
+	"startup_route":"authorized",
 	"forbidden_route":"/forbidden",
 	"unauthorized_route":"/unauthorized",
+	"trigger_authorization_result_event": true,
 	"log_console_warning_active":true,
 	"log_console_debug_active":true,
 	"max_id_token_iat_offset_allowed_in_seconds":"60",
